# rustical

./: Cargo.toml  Dockerfile
crates/caldav/: Cargo.toml
crates/caldav/src/: lib.rs
crates/carddav/: Cargo.toml
crates/carddav/src/: lib.rs
crates/frontend/: Cargo.toml
crates/frontend/public/templates/layouts/: default.html
crates/frontend/public/templates/pages/: login.html  user.html
crates/frontend/src/: lib.rs
crates/frontend/src/nextcloud_login/: mod.rs
crates/frontend/src/routes/: login.rs  user.rs
crates/oidc/: Cargo.toml
crates/oidc/src/: error.rs  lib.rs  routes.rs  user_store.rs
crates/store/: Cargo.toml
crates/store/src/auth/: middleware.rs
src/: app.rs  config.rs  lib.rs  main.rs
src/integration_tests/: mod.rs
tests/integration_tests/: mod.rs
